# Rogue-woods

./: CMakeLists.txt
Assets/: Locationdescription.txt  Map_nodes.txt  The_lost_ring_quest.txt  keywords.txt
include/: Fight_state.hpp  Item.hpp  Statisticswindow.hpp  action_button.hpp  button.hpp  character.hpp  configs.hpp  console.hpp  default_strategy.hpp  enemy.hpp  enemy_stats.hpp  game.hpp  game_state.hpp  game_system.hpp  interface_element.hpp  inv_quest.hpp  map.hpp  mapstats.hpp  node.hpp  option.hpp  player.hpp  player_input.hpp  quest.hpp  quest_menu.hpp  quest_option.hpp  quest_pop_up.hpp  state.hpp  statemanager.hpp  strategy.hpp  strategy_for_quest.hpp  utils.h  utils.hpp
src/: Fight_state.cpp  Item.cpp  Statisticswindow.cpp  action_button.cpp  button.cpp  console.cpp  default_strategy.cpp  enemy_stats.cpp  game.cpp  game_state.cpp  game_system.cpp  inv_quest.cpp  map.cpp  mapstats.cpp  node.cpp  option.cpp  player.cpp  player_input.cpp  quest.cpp  quest_menu.cpp  quest_option.cpp  quest_pop_up.cpp  statemanager.cpp  strategy.cpp  strategy_for_quest.cpp  utils.cpp
